--- a/css/incubator-style.css
+++ b/css/incubator-style.css
@@ -99,7 +99,7 @@ a:hover {
 }
 
 .logo {
-	width: 220px;
+	width: 80%;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	display:block;
@@ -261,6 +261,44 @@ footer {
 #startup-package {
 	margin-bottom: 140px;
 }
+
+.tile {
+	padding: 10px;
+	text-align: center;
+	color: #FFFFFF;
+	font-size: 18px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	margin: 22px;
+	font-weight: 400;
+}
+
+.incubation {
+	background-color: #12948a;	
+}
+.int-property {
+	background-color: #12948a;
+}
+.corp-legal {
+	background-color: #12948a;
+}
+.accounting {
+	background-color: #12948a;
+}
+.banking {
+	background-color: #12948a;
+}
+.lab-space {
+	background-color: #12948a;
+}
+.grants {
+	background-color: #12948a;
+}
+
+
+
+
 
 /* Basic jQuery Slider essential styles */
 
