--- a/css/incubator-style.css
+++ b/css/incubator-style.css
@@ -31,6 +31,17 @@ a:hover {
 	box-shadow: 0 10px 5px -10px black;
 }
 
+img.gray {
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+	filter: gray; /* IE6-9 */
+	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */	
+}
+
+img.gray:hover{
+	filter: none;
+	-webkit-filter: grayscale(0%);	
+}
+
 /* Logo Containers for rows of logos*/
 .logo-container {
 	display: block;
@@ -46,14 +57,6 @@ a:hover {
 	margin-right: 10px;
 	margin-left: 10px;
 	height: 35px;
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
-	filter: gray; /* IE6-9 */
-	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
-}
-
-.logo-container img:hover {
-	filter: none;
-	-webkit-filter: grayscale(0%);
 }
 
 .logo-container.tenant {
@@ -187,12 +190,12 @@ footer {
 	width: 150px;
 	display: block;
 	margin: 20px auto 60px;
-	border: 2px solid #FF454C;
+	#border: 2px solid #FF454C;
 	border-radius: 182px;
 }
 
 .people:hover {
-	border: 2px solid #231F20;
+	#border: 2px solid #231F20;
 	cursor: pointer;
 	filter: none;
 }
